fix: updated code based on sonarCloud issues.